# hermes-hemera

./: .gitignore  .gitmodules  CMakeLists.txt  README-HAIKU-PORT.md
cmake/: HermesDependencies.cmake  HermesDependencyRefs.env
cmake/patches/hermes-paige/: 0001-haiku-include-pgdefstl.patch
docs/porting/: help-topics.md  legacy-artifacts.md  plugin-abi-notes.md
docs/porting/compose/: compose-behavior.md  signatures-and-diagnostics.md
docs/porting/transport/: transport-tranche.md
docs/release-notes/: 1.0.0-rc1.md  1.0.md
packaging/haiku/: Hemera.PackageInfo.in  Hemera.rdef.in  README.md  haikuporter_field_order.txt  release_manifest.yml
packaging/haikuports/hemera/: hemera-1.0.0~rc1.recipe.in
packaging/haikuports/mail-client/hemera/: hemera.recipe.in
scripts/: bootstrap_dependencies.sh  check_no_legacy_paths.sh  release_haiku_rollout.sh
src/: CMakeLists.txt
src/hermes_port/core/: CMakeLists.txt
src/hermes_port/core/include/hermes/: AccountService.h  AddressBookService.h  BufferedMessageRenderer.h  ComposeController.h  ComposeMessage.h  ComposeQueue.h  CredentialStore.h  DirectoryServiceCatalog.h  DraftStore.h  FilesystemPluginHost.h  FilterEngine.h  FilterReportStore.h  FilterStore.h  GssapiAuthenticator.h  GuiPreferences.h  HelpCatalog.h  HemeraIdentity.h  HunspellSpellService.h  ImapActionStore.h  ImportService.h  InMemoryWorkspaceModel.h  IniSettingsStore.h  JunkScorer.h  LegacyMessageStatus.h  LinkHistoryStore.h  MailTaskModel.h  MailTransferSettings.h  MailTransportCoordinator.h  MailboxMaintenance.h  MailboxSort.h  MailboxStore.h  MailboxUiSettings.h  MailboxWorkflow.h  MemoryRichTextSurface.h  MessageRenderer.h  MessageStore.h  MigrationTool.h  MoodWatchAnalyzer.h  NicknameStore.h  OAuthSupport.h  (+22 more)
src/hermes_port/core/include/hermes/plugins/: PluginApi.h
src/hermes_port/core/src/: BufferedMessageRenderer.cpp  ComposeController.cpp  ComposeMessage.cpp  ComposeQueue.cpp  CredentialStore.cpp  DirectoryServiceCatalog.cpp  EudoraStorage.cpp  EudoraStorage.h  FilesystemDraftStore.cpp  FilesystemFilterStore.cpp  FilesystemMailboxStore.cpp  FilesystemMessageStore.cpp  FilesystemPluginHost.cpp  FilesystemSignatureStore.cpp  FilesystemStationeryStore.cpp  FilterReportStore.cpp  FlatFileNicknameStore.cpp  GssapiAuthenticator.cpp  GuiPreferences.cpp  HemeraIdentity.cpp  HeuristicJunkScorer.cpp  HunspellSpellService.cpp  ImapActionStore.cpp  InMemoryWorkspaceModel.cpp  IniSettingsStore.cpp  LegacyMessageStatus.cpp  LinkHistoryStore.cpp  MailTaskModel.cpp  MailTransferSettings.cpp  MailTransportCoordinator.cpp  MailboxSort.cpp  MailboxUiSettings.cpp  MailboxWorkflow.cpp  MemoryAddressBookService.cpp  MemoryRichTextSurface.cpp  OAuthSupport.cpp  OpenSslTlsProvider.cpp  PopServerStatus.cpp  RendererMode.cpp  RichTextFormat.cpp  (+8 more)
src/hermes_port/haiku/: CMakeLists.txt  ComposeEditorHost.h  HaikuComposeWindow.cpp  HaikuComposeWindow.h  HaikuFindSupport.cpp  HaikuFindSupport.h  HaikuHermesImports.h  HaikuIconCatalog.cpp  HaikuIconCatalog.h  HaikuMainWindow.cpp  HaikuMainWindow.h  HaikuMessageWindow.cpp  HaikuMessageWindow.h  HaikuShellHost.cpp  HaikuShellHost.h  HaikuToolWindow.cpp  HaikuToolWindow.h  HaikuToolbarSupport.cpp  HaikuToolbarSupport.h  HaikuWazooWindow.cpp  HaikuWazooWindow.h  HaikuWebKitSupport.cpp  HaikuWebKitSupport.h  Main.cpp  PaigeEditorView.cpp  PaigeEditorView.h
src/hermes_port/haiku/assets/hunspell/: base_utf.aff  base_utf.dic
src/hermes_port/haiku/assets/icons/: NOTICE.md
src/hermes_port/paige/: CMakeLists.txt  PaigeRichTextSurface.cpp  PaigeRuntime.cpp
src/legacy_transplants/: CMakeLists.txt  LegacyAccountService.cpp  LegacyHelpCatalog.cpp  LegacyImportService.cpp  TaeMoodWatchAnalyzer.cpp
src/legacy_transplants/tae/: TAECommon.c  TAECommon.h  TAEDictionary.c
tests/: AccountServiceTests.cpp  CMakeLists.txt  ComposeControllerTests.cpp  ComposePolicyTests.cpp  ComposeQueueTests.cpp  DraftStoreTests.cpp  FilterEngineTests.cpp  GuiPreferencesTests.cpp  HaikuComposeSmokeTest.cpp  HaikuNativePaigeBuildSmoke.cpp  HaikuWebKitBuildSmoke.cpp  HaikuWorkflowSmokeTest.cpp  HelpCatalogTests.cpp  HunspellSpellServiceTests.cpp  ImapActionStoreTests.cpp  ImportServiceTests.cpp  IniSettingsStoreTests.cpp  MailStoreTests.cpp  MailTransportCoordinatorTests.cpp  MailboxSortTests.cpp  MailboxUiSettingsTests.cpp  MailboxWorkflowTests.cpp  MoodWatchAnalyzerTests.cpp  NicknameAndAddressBookTests.cpp  OAuthSupportTests.cpp  PluginHostTests.cpp  ReleaseGateTests.cpp  RendererModeTests.cpp  RichTextFormatTests.cpp  SampleStatusPlugin.cpp  SearchAndJunkTests.cpp  ShellBehaviorAndCredentialTests.cpp  SignatureStoreTests.cpp  TestMain.cpp  TestPaths.h  TestRegistry.h  ToolbarConfigurationTests.cpp  TransportServiceTests.cpp  WorkflowToolStoreTests.cpp  WorkspaceModelTests.cpp
tests/fixtures/legacy/: shell_fidelity_matrix.txt
tests/fixtures/legacy/compose/signatures/: Alternate.html  Standard.sig
tests/fixtures/legacy/compose/stationery/: FollowUp.sta  Status.html
tools/haiku_rollout/: .gitignore  README.md  config.example.yml  mix.exs  run_tests.sh
tools/haiku_rollout/lib/: hemera_haiku_rollout.ex
tools/haiku_rollout/lib/hemera_haiku_rollout/: branch_push_diverged_error.ex  cli.ex  command_error.ex  command_result.ex  config.ex  doctor.ex  executor.ex  github.ex  haiku_ports.ex  host.ex  local_config.ex  manifest.ex  recipe.ex  release.ex  release_context.ex  repo_version.ex  state.ex  status.ex  submission.ex  system_executor.ex  util.ex  versioning.ex  watch.ex  workspace.ex
tools/haiku_rollout/test/: config_test.exs  doctor_test.exs  github_test.exs  haiku_ports_test.exs  manifest_test.exs  recipe_test.exs  release_context_test.exs  release_test.exs  repo_version_test.exs  state_test.exs  status_test.exs  submission_test.exs  system_executor_test.exs  versioning_test.exs  watch_test.exs
tools/haiku_rollout/test_support/: fake_executor.ex  workspace_factory.ex
xxx/scripts/: release_linux_rollout.sh
xxx/tools/linux_rollout/: mix.exs
xxx/tools/linux_rollout/scripts/: launchpad_helper.py
xxx/tools/linux_rollout/test/: linux_rollout_test.exs
(+146 files in other folders)
